--- a/styles/main.css
+++ b/styles/main.css
@@ -68,3 +68,28 @@ body{
 .heading-two h1{
     font-size: 48px;
 }
+/* Footer Section */
+.footer-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-logo img{
+    width: 484px;
+    height: 110px;
+}
+.icons a{
+    text-decoration: none;
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    color: #969BAB;
+    background-color: grey;
+    border-radius: 50%;
+    align-items: center;
+    margin-right: 10px;
+}
+.fab{
+    margin-left: 7px;
+    margin-top: 7px;
+}
