--- a/styles/main.css
+++ b/styles/main.css
@@ -122,7 +122,7 @@ body{
 @media only screen and (max-width:688px) {
     .first-banner{
         flex-direction: column;
-        width: 668px;
+        width: 360px;
         height: 695px;
     }
     .heading h1{
@@ -134,7 +134,7 @@ body{
     }
     .players{
         grid-template-columns: 1fr;
-        /* margin-left: 0; */
+        margin-left: 0;
     }
     .second-banner{
         flex-direction: column;
