--- a/styles/main.css
+++ b/styles/main.css
@@ -112,7 +112,9 @@ body{
     background-color: grey;
     border-radius: 50%;
     align-items: center;
-    margin-right: 10px;
+}
+.icons a i{
+    text-align: center;
 }
 .fab{
     margin-left: 7px;
@@ -143,12 +145,26 @@ body{
     .heading-two h1{
     font-size: 30px;
     }
-    .statics-all-col{
-        flex-direction: column;
-        align-items: center;
+    .statics{
+        display: none;
     }
-    .frame-data{
-        flex-direction: column;
-        width: 100%;
+    .iframe-section{
+        display: none;
+    }
+    .footer-section{
+        align-items: flex-start;
+    }
+    .footer-logo img{
+    width: 300px;
+    height: 110px;
+    }
+    .footer-section .icons{
+        margin-left: 80px;
+    }
+    .icons a i{
+        text-align: center;
+    }
+    .copyright p{
+        margin-left: 50px;
     }
 }
